--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,9 @@
 name: uikitview_example
 description: A new Flutter plugin.
 version: 0.0.1
-author:
-homepage:
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.10.0"
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -27,9 +24,6 @@ flutter:
   # adding or updating assets for this project.
   plugin:
     platforms:
-      android:
-        package: com.example.uikitview_example
-        pluginClass: UikitviewExamplePlugin
       ios:
         pluginClass: UikitviewExamplePlugin
 
